test/simple/ill-typed/det_funs/call_nondet_gen_fun.caprice
(* TEST
  include refutable;
*)

(*
  Using nondeterministic function where a deterministic one is expected.

  This is a TODO because we don't check deterministic functions correctly yet.
*)
let _ : ((int --> int) -> int) -> (int -> int) -> int =
  fun f g ->
    f g (* ERROR: g is not deterministic *)